force-app/main/default/objects/RMS_Manifest_Item__c/RMS_Manifest_Item__c.object-meta.xml
<CustomObject>
    <description>Case row on an RMS return manifest.</description>
    <label>RMS Manifest Item</label>
    <nameField>
        <displayFormat>RMSI-{000000}</displayFormat>
        <label>Manifest Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RMS Manifest Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>