force-app/main/default/objects/RMS_Manifest_Item__c/fields/Barcode_Scan__c.field-meta.xml
<CustomField>
    <fullName>Barcode_Scan__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Barcode Scan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>