force-app/main/default/objects/RMS_Manifest_Item__c/fields/Barcode_Scan_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Barcode_Scan_Document_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Barcode Scan Document ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>