force-app/main/default/objects/RMS_Manifest_Item__c/fields/Case_Delivery_Date_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Case_Delivery_Date_Snapshot__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Case Delivery Date Snapshot</label>
    <type>Date</type>
</CustomField>