force-app/main/default/objects/RMS_Manifest_Item__c/fields/Case_Number_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Case_Number_Snapshot__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Case Number Snapshot</label>
    <length>80</length>
    <type>Text</type>
</CustomField>