force-app/main/default/objects/RMS_Manifest_Item__c/fields/DHS_Case__c.field-meta.xml
<CustomField>
    <fullName>DHS_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>DHS_Case__c</referenceTo>
    <relationshipLabel>RMS Manifest Items</relationshipLabel>
    <relationshipName>RMS_Manifest_Items</relationshipName>
    <type>Lookup</type>
</CustomField>