force-app/main/default/objects/RMS_Manifest_Item__c/fields/Investigator_Name_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Investigator_Name_Snapshot__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Investigator Name Snapshot</label>
    <length>255</length>
    <type>Text</type>
</CustomField>