force-app/main/default/objects/RMS_Manifest_Item__c/fields/Manifest__c.field-meta.xml
<CustomField>
    <fullName>Manifest__c</fullName>
    <label>Manifest</label>
    <referenceTo>RMS_Manifest__c</referenceTo>
    <relationshipName>Manifest_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>