force-app/main/default/objects/RMS_Manifest_Item__c/fields/No_Materials_Explanation__c.field-meta.xml
<CustomField>
    <fullName>No_Materials_Explanation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>No Materials Explanation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>