force-app/main/default/objects/RMS_Manifest_Item__c/fields/Reconciled_By__c.field-meta.xml
<CustomField>
    <fullName>Reconciled_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reconciled By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>RMS Reconciled Items</relationshipLabel>
    <relationshipName>RMS_Reconciled_Items</relationshipName>
    <type>Lookup</type>
</CustomField>