force-app/main/default/objects/RMS_Manifest_Item__c/fields/Reconciled_Date__c.field-meta.xml
<CustomField>
    <fullName>Reconciled_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reconciled Date</label>
    <type>DateTime</type>
</CustomField>