force-app/main/default/objects/RMS_Manifest_Item__c/fields/Scan_Code__c.field-meta.xml
<CustomField>
    <fullName>Scan_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Scan Code</label>
    <length>120</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>