force-app/main/default/objects/RMS_Manifest_Item__c/fields/Subject_Last_Four__c.field-meta.xml
<CustomField>
    <fullName>Subject_Last_Four__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Subject Last Four</label>
    <length>4</length>
    <type>Text</type>
</CustomField>